--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -10,7 +10,7 @@
         <section th:fragment="botonesAgregar" class="py-4 mb-4 bg-light">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">   
+                    <div class="col-md-3" sec:authorize="hasRole('ROLE_ADMIN')">   
                         <button 
                             type="button" 
                             class="btn btn-primary btn-block" 
@@ -30,7 +30,7 @@
                  tabindex="-1" 
                  aria-labelledby="exampleModalLabel" 
                  aria-hidden="true">
-                <div class="modal-dialog modal-md">
+                <div class="modal-dialog modal-md" >
                     <div class="modal-content">
                         <div class="modal-header bg-info text-white">
                             <h5 class="modal-title">[[#{producto.agregar}]]</h5>
@@ -100,7 +100,7 @@
                                             <th class="text-center">[[#{producto.total}]]</th>​
                                             <th class="text-center">[[#{producto.activo}]]</th>​
                                             <th class="text-center">[[#{producto.categoria}]]</th>​
-                                            <th></th><th></th></tr>​
+                                            <th sec:authorize="hasRole('ROLE_ADMIN')"></th><th sec:authorize="hasRole('ROLE_ADMIN')"></th></tr>​
                                     </thead>​
                                     <tbody>​
                                         <tr th:each="producto, contador : ${productos}">​
@@ -111,13 +111,15 @@
                                             <td class="text-end">[[${#numbers.formatDecimal(producto.precio*producto.existencias, 1, 'DEFAULT', 2, 'DEFAULT')}]]</td>​
              <td  class="text-center" th:text="${producto.activo} ? 'Activa' : 'Inactiva'"/>​
                                             <td>[[${producto.categoria.descripcion}]]</td>​
-                                            <td><a th:href="@{/producto/eliminar/}+${producto.idProducto}"​
+                                            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/producto/eliminar/}+${producto.idProducto}"​
                                                    class="btn btn-danger">​
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a></td>​
-                                            <td>​
+                                            <td sec:authorize="hasRole('ROLE_ADMIN')">​
                                                 <a th:href="@{/producto/modificar/}+${producto.idProducto}"​
                                                    class="btn btn-success">​
-                                                    <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]</a></td></tr>​
+                                                    <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]</a>
+                                            </td>
+                                        </tr>​
                                     </tbody>​
                                 </table>​
                             </div>​
