--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TODO supply a title</title>
+        <title>TechShop</title>
     </head>
     <body>
-        <header th:replace="~{layout/plantilla :: header}"/>
+        <header th:replace="~{layout/plantilla :: header}"></header>
+
+        <section th:replace="~{categoria/fragmentos :: botonesAgregar}"></section>
+        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"></section>
+        <section th:replace="~{categoria/fragmentos :: listadoCategorias}"></section>
         
-        <section th:replace="~{categoria/fragmentos :: botonesAgregar}"/>
-        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/>
-        <section th:replace="~{categoria/fragmentos :: listadoCategorias}"/>
-        
-        <footer th:replace="~{layout/plantilla :: footer}"/>
+        <footer th:replace="~{layout/plantilla :: footer}"></footer>
+
     </body>
 </html>
