--- a/src/main/resources/templates/pruebas/listado2.html
+++ b/src/main/resources/templates/pruebas/listado2.html
@@ -5,11 +5,12 @@
         <title>TechShop</title>
     </head>
     <body>
-        <header th:replace="~{layout/plantilla :: header}"/>
+        <header th:replace="~{layout/plantilla :: header}"></header>
 
-        <section th:replace="~{pruebas/fragmentos :: filtros}"/>
-        <section th:replace="~{pruebas/fragmentos :: listadoProductos}"/>
+        <section th:replace="~{pruebas/fragmentos :: filtros}"></section>
+        <section th:replace="~{pruebas/fragmentos :: listadoProductos}"></section>
+        
+        <footer th:replace="~{layout/plantilla :: footer}"></footer>
 
-        <footer th:replace="~{layout/plantilla :: footer}"/>       
     </body>
 </html>
